# shooter-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp
include/: App.h  Bullet.h  Bullet.hpp  CMakeLists.txt  Platform.h  Platform.hpp  Player.h  Player.hpp  WindowRenderer.hpp
include/component/: Animation.hpp  CMakeLists.txt  Collider.hpp  PhysicalBody.hpp  Sprite.hpp  Transform.hpp
include/entity/: Bullet.hpp  CMakeLists.txt  Platform.hpp  Player.hpp  Weapon.hpp
include/system/: CMakeLists.txt  LevelLoader.hpp
include/utils/: CMakeLists.txt  Color.hpp  LevelObject.hpp  TextureProvider.hpp  Vector2.hpp
levels/: demo_level.csv
src/: App.c  Bullet.c  Bullet.cpp  CMakeLists.txt  Platform.c  Platform.cpp  Player.c  Player.cpp  WindowRenderer.cpp  main.c
src/component/: Animation.cpp  CMakeLists.txt  Collider.cpp  PhysicalBody.cpp  Sprite.cpp  Transform.cpp
src/entity/: Bullet.cpp  CMakeLists.txt  Platform.cpp  Player.cpp  Weapon.cpp
src/system/: CMakeLists.txt  LevelLoader.cpp
src/utils/: CMakeLists.txt  TextureProvider.cpp  Vector2.cpp
